--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
             $("#txtAdet").keypress(function (e) {
                 if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
                     $("#sonuc").fadeIn(1000);
-                    $("#Adet").html("Sadece Sayı Giriniz");
+                    $("#sonuc").html("Sadece Sayı Giriniz");
                     $("#sonuc").removeClass();
                     $("#sonuc").addClass("alert alert-danger");
                     $("#sonuc").fadeOut(3000);
