--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,40 @@
                 <h1>Ürünler</h1>
                 <table class="table table-hover" id="tbÜrünler">
                     <tr class="bg-info">
+                    <tr>
+
+                        <td>Ali Kılıç</td>
+                        <td>Ekmek</td>
+                        <td>5</td>
+                        <td>
+                          <button class="btn btn-danger sil">Sil</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Ali Kılıç</td>
+                        <td>Yumurta</td>
+                        <td>15</td>
+                        <td>
+                          <button class="btn btn-danger sil">Sil</button>
+                        </td>
+                    </tr>
+                    <tr>
+
+                        <td>Veli Tokmak</td>
+                        <td>Sucuk</td>
+                        <td>1</td>
+                        <td>
+                          <button class="btn btn-danger sil">Sil</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Veli Tokmak</td>
+                        <td>Süt</td>
+                        <td>3</td>
+                        <td>
+                          <button class="btn btn-danger sil">Sil</button>
+                        </td>
+                    </tr>
 
                         <td>Adı Soyadı</td>
                         <td>Ürün</td>
